[package]
name = "rust-mos-test"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 2
lto = true
debug = 2
codegen-units = 1

[profile.release]
opt-level = "s"
lto = true # setting to false results in LLVM error
debug = 2

[dependencies]
itertools = { version = "0.10.3", default-features = false }
mos-hardware = { git = "https://github.com/mlund/mos-hardware.git" }
ufmt-stdio = "0"
